--- a/Grunnleggende Programmering/programmering_intro/src/App.css
+++ b/Grunnleggende Programmering/programmering_intro/src/App.css
@@ -19,6 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -36,6 +37,6 @@
   }
 }
 
-.oppgaveBox {
-  border: solid white 1px;
+.deloppgave {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
