--- a/klassekart/klassekart/src/App.css
+++ b/klassekart/klassekart/src/App.css
@@ -36,7 +36,22 @@
   }
 }
 
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  border: solid green 2px;
+}
+
 .tositteplasser {
+  display: flex;
   width: 100px;
+}
+
+.elev {
+  padding: 2em;
+  margin: 2em;
   border: solid white 2px;
 }
