--- a/klassekart/klassekart/src/App.css
+++ b/klassekart/klassekart/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
@@ -36,22 +37,44 @@
   }
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  border: solid green 2px;
-}
-
 .tositteplasser {
   display: flex;
   width: 100px;
+}
+
+.tresitteplasser {
+  display: flex;
 }
 
 .elev {
   padding: 2em;
   margin: 2em;
   border: solid white 2px;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.leftside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  background: green;
+}
+
+.rightside {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: 100%;
+  background: blue;
+}
+
+.box {
+  border: solid black 2px;
 }
