--- a/klassekart/klassekart/src/App.css
+++ b/klassekart/klassekart/src/App.css
@@ -43,8 +43,11 @@
 
 
 .elev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 2em;
-  width: 100px;
+  width: 2em;
   margin-top: 2em;
   border: solid white 2px;
   font-size: 2em;
