trying to push forward from component to another component

--- a/klassekart/klassekart/src/App.css
+++ b/klassekart/klassekart/src/App.css
@@ -75,3 +75,18 @@
   height: 100%;
   background: blue;
 }
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+
+}
+
+.profile-box {
+  border: solid black 2px;
+  background: coral;
+  height: 50%;
+}
